copyediting and add links

--- a/docs/tutorials/fractional-gates.ipynb
+++ b/docs/tutorials/fractional-gates.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Introduction to fractional gates\n",
     "\n",
-    "Usage estimate: under 30 seconds on ibm_fez (NOTE: This is an estimate only. Your runtime may vary.)"
+    "Usage estimate: under 30 seconds on `ibm_fez` (NOTE: This is an estimate only. Your runtime may vary.)"
    ]
   },
   {
@@ -17,13 +17,13 @@
    "source": [
     "## Background\n",
     "\n",
-    "### Fractional gates on IBM Quantum Systems\n",
+    "### Fractional gates on IBM QPUs\n",
     "\n",
     "Fractional gates are parameterized quantum gates that enable direct execution of arbitrary-angle rotations (within specific bounds),\n",
     "eliminating the need to decompose them into multiple basis gates.\n",
     "By leveraging the native interactions between physical qubits, users can implement certain unitaries more efficiently on hardware.\n",
     "\n",
-    "IBM Quantum’s Heron QPUs support the following fractional gates:\n",
+    "IBM Quantum&reg; Heron QPUs support the following fractional gates:\n",
     "- $R_{ZZ}(\\theta)$ for $0 < \\theta < \\pi / 2$\n",
     "- $R_X(\\theta)$ for any real value $\\theta$\n",
     "\n",
@@ -41,8 +41,8 @@
     "### Limitations\n",
     "\n",
     "Fractional gates are currently an experimental feature and come with a few constraints:\n",
-    "- $R_{ZZ}$ is limited to angles in the range $0 < \\theta < \\pi / 2$\n",
-    "- Using fractional gates is not supported for dynamic circuits, Pauli twirling, PEC, and ZNE (using PEA).\n",
+    "- $R_{ZZ}$ is limited to angles in the range $0 < \\theta < \\pi / 2$.\n",
+    "- Using fractional gates is not supported for [dynamic circuits](/docs/guides/classical-feedforward-and-control-flow), [Pauli twirling](/docs/guides/error-mitigation-and-suppression-techniques#pauli-twirling), [probabilistic error cancellation](/docs/guides/error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec) (PEC), and [zero-noise extrapolation](/docs/guides/error-mitigation-and-suppression-techniques#zero-noise-extrapolation-zne) (ZNE) (using [probabilistic error amplification](/docs/guides/error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea) (PEA)).\n",
     "\n",
     "Using fractional gates requires a different workflow compared to the standard approach.\n",
     "This tutorial explains how to work with fractional gates through a practical application.\n",
