--- a/docs/tutorials/fractional-gates.ipynb
+++ b/docs/tutorials/fractional-gates.ipynb
@@ -44,12 +44,12 @@
     "- $R_{ZZ}$ is limited to angles in the range $0 < \\theta < \\pi / 2$.\n",
     "- Using fractional gates is not supported for [dynamic circuits](/docs/guides/classical-feedforward-and-control-flow), [Pauli twirling](/docs/guides/error-mitigation-and-suppression-techniques#pauli-twirling), [probabilistic error cancellation](/docs/guides/error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec) (PEC), and [zero-noise extrapolation](/docs/guides/error-mitigation-and-suppression-techniques#zero-noise-extrapolation-zne) (ZNE) (using [probabilistic error amplification](/docs/guides/error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea) (PEA)).\n",
     "\n",
-    "Using fractional gates requires a different workflow compared to the standard approach.\n",
+    "Fractional gates require a different workflow compared to the standard approach.\n",
     "This tutorial explains how to work with fractional gates through a practical application.\n",
     "\n",
-    "See the following pages for the introduction to the fractional gates.\n",
-    "- \"Fractional gate\": https://quantum.cloud.ibm.com/docs/en/guides/fractional-gates\n",
-    "- \"Why not to use fractional gates\": https://quantum.cloud.ibm.com/docs/en/guides/fractional-gates#when-not-to-use-fractional-gates"
+    "See the following for more details on fractional gates.\n",
+    "- [Fractional gates](/docs/guides/fractional-gates)\n",
+    "- [When *not* to use fractional gates](/docs/guides/fractional-gates#when-not-to-use-fractional-gates)"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "id": "db213506",
    "metadata": {},
    "source": [
-    "The workflow for using the fractional gates generally follows the [Qiskit Pattern](https://quantum.cloud.ibm.com/docs/en/guides/intro-to-patterns).\n",
+    "The workflow for using the fractional gates generally follows the [Qiskit patterns](/docs/guides/intro-to-patterns) workflow.\n",
     "The key difference is that all RZZ angles must satisfy the constraint $0 < \\theta \\leq \\pi/2$.\n",
     "There are two approaches to ensure this condition is met.\n",
     "This tutorial focuses on and recommends the second approach."
@@ -76,12 +76,11 @@
    "id": "5797ed7e",
    "metadata": {},
    "source": [
-    "### 1. Generate parameter values that satisfy the RZZ angle constraint.\n",
+    "### 1. Generate parameter values that satisfy the RZZ angle constraint\n",
     "\n",
-    "If you are confident that all RZZ angles fall within the valid range, you can follow the standard Qiskit Pattern workflow\n",
-    "In this case, you simply submit the parameter values as part of PUB. The workflow proceeds as follows.\n",
+    "If you are confident that all RZZ angles fall within the valid range, you can follow the standard Qiskit patterns workflow.\n",
+    "In this case, you simply submit the parameter values as part of a PUB. The workflow proceeds as follows.\n",
     "\n",
-    "E.g.,\n",
     "```python\n",
     "pm = generate_preset_pass_manager(backend=backend, ...)\n",
     "t_circuit = pm.run(circuit)\n",
@@ -94,7 +93,7 @@
     "```\n",
     "'The instruction rzz is supported only for angles in the range [0, pi/2], but an angle (20.0) outside of this range has been requested; via parameter value(s) γ[0]=10.0, substituted in parameter expression 2.0*γ[0].'\n",
     "```\n",
-    "To avoid this error, you may want to consider the second approach described below."
+    "To avoid this error, you should consider the second approach described below."
    ]
   },
   {
@@ -102,15 +101,14 @@
    "id": "d3e00f37",
    "metadata": {},
    "source": [
-    "### 2. Assign parameter values to circuits before transpilation.\n",
+    "### 2. Assign parameter values to circuits before transpilation\n",
     "\n",
-    "qiskit-ibm-runtime package provides a specialized transpiler pass called `FoldRzzAngle` ([link](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/transpiler-passes-fold-rzz-angle)).\n",
+    "The `qiskit-ibm-runtime` package provides a specialized transpiler pass called [`FoldRzzAngle`](/api/qiskit-ibm-runtime/transpiler-passes-fold-rzz-angle).\n",
     "This pass transforms quantum circuits so that all RZZ angles comply with the RZZ angle constraint.\n",
-    "If you provide the backend to `generate_preset_pass_manager` or `transpile`, Qiskit automatically applies `FoldRzzAngle` to the input quantum circuits.\n",
+    "If you provide the backend to `generate_preset_pass_manager` or `transpile`, Qiskit automatically applies `FoldRzzAngle` to the quantum circuits.\n",
     "This asks you to assign parameter values to quantum circuits before transpilation.\n",
     "The workflow proceeds as follows.\n",
     "\n",
-    "E.g.,\n",
     "```python\n",
     "pm = generate_preset_pass_manager(backend=backend, ...)\n",
     "b_circuit = circuit.assign_parameters(parameter_values)\n",
@@ -120,8 +118,8 @@
     "estimator.run([(t_circuit, t_observable)])\n",
     "```\n",
     "\n",
-    "Please note that this workflow incurs a higher computational cost than the first approach, as it involves assigning parameter values to quantum circuits and storing the parameter-bound circuits locally.\n",
-    "Additionally, there is a known issue in Qiskit where the transformation of rzz gates may fail in certain scenarios. For a workaround, please refer to the \"Troubleshooting\" section."
+    "Note that this workflow incurs a higher computational cost than the first approach, as it involves assigning parameter values to quantum circuits and storing the parameter-bound circuits locally.\n",
+    "Additionally, there is a known issue in Qiskit where the transformation of RZZ gates may fail in certain scenarios. For a workaround, please refer to the [Troubleshooting](#troubleshooting) section."
    ]
   },
   {
