Remove links to old cloud docs

--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -63,7 +63,7 @@ Your user account is associated with one or more [instances,](./instances) ident
        You can add or remove access groups at any time from IBM Cloud.  See [Setting up access groups](https://cloud.ibm.com/docs/account?topic=account-groups&interface=ui) for instructions.
 
         <Admonition type="note">
-          If you are an administrator who needs to set up Qiskit Runtime on Cloud for your organization, refer to [Plan Qiskit Runtime for an organization](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-considerations-set-up-runtime).
+          If you are an administrator who needs to set up Qiskit Runtime on Cloud for your organization, refer to [Plan Qiskit Runtime for an organization](/docs/guides/considerations-set-up-runtime).
         </Admonition>
 
 <span id="access-credentials"></span>
