--- a/docs/migration-guides/migrate-classic-rest-api.mdx
+++ b/docs/migration-guides/migrate-classic-rest-api.mdx
@@ -22,7 +22,7 @@ https://quantum.cloud.ibm.com/api/
 
 <span id="from-runtime-cloud"></span>
 ## Migrate from the Qiskit Runtime on IBM Cloud REST API
-If you are moving from the [Qiskit Runtime on IBM Cloud REST API](/docs/api/qiskit-runtime-rest), not much has changed for you. The following points are all you need to consider:
+If you are moving from the [Qiskit Runtime on IBM Cloud REST API](./docs/api/qiskit-runtime-rest), not much has changed for you. The following points are all you need to consider:
 * When you call the API, instead of using `https://us-east.quantum-computing.cloud.ibm.com/` you must use: `https://quantum.cloud.ibm.com/api/`.
 * All existing endpoints are the same, but now have `/v1/` in front.  For example, `/jobs` becomes `/v1/jobs`.
 * There is also one new endpoint: `/v1/versions`.
