--- a/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
+++ b/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
@@ -72,7 +72,9 @@ When you run a Python cell for the first time, you will be prompted to log in to
 
 You should run each Python cell in order, from the beginning of the notebook. Later cells are typically dependent on earlier ones to set up libraries, variables, and so on. Each cell has been written to produce some output after execution.
 
-> **Important Note** - The Python code examples are provided to demonstrate the mathematical principles of the algorithms being discussed. They are not intended to be used as actual implementations. It is essential to use well-supported and reviewed security libraries in any real-world usage.
+<Admonition type="note" title="Important">
+The Python code examples are provided to demonstrate the mathematical principles of the algorithms being discussed. They are not intended to be used as actual implementations. It is essential to use well-supported and reviewed security libraries in any real-world usage.
+</Admonition>
 
 ## Digital Certification
 
