--- a/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
+++ b/learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb
@@ -1380,9 +1380,9 @@
     "\n",
     "In the following code cells, we illustrate an example of finding a private key given only the public key. This will use brute-force classical computation, but shows how Shor's algorithm could be used - including large keys.\n",
     "\n",
-    "<Admoniton type=\"note\">\n",
+    "<Admonition type=\"note\">\n",
     "In this section we will show the math calculations in detail as part of the Python code\n",
-    "</Admoniton>\n",
+    "</Admonition>\n",
     "\n",
     "In the example, we have a public key $(5, 247)$, and we will recover the private key.\n",
     "\n",
