--- a/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/css-codes.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/quantum-code-constructions/css-codes.ipynb
@@ -191,7 +191,9 @@
     "\n",
     "We can now define CSS codes in very simple terms.\n",
     "\n",
-    "> **Definition.** A CSS code is a stabilizer code that can be expressed using only $X$ and $Z$ stabilizer generators.\n",
+    "<Admonition type=\"tip\" title=\"Definition\">\n",
+    "A CSS code is a stabilizer code that can be expressed using only $X$ and $Z$ stabilizer generators.\n",
+    "</Admonition>\n",
     "\n",
     "That is, CSS codes are stabilizer codes for which we have stabilizer generators in which no Pauli $Y$ matrices appear, and for which $X$ and $Z$ never appear in the *same* stabilizer generator.\n",
     "\n",
