--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -14,11 +14,12 @@ If you want access to multiple plans, you can create multiple instances and assi
 ```python
   from qiskit_ibm_runtime import QiskitRuntimeService
   service = QiskitRuntimeService.save_account(
-    token=token, # Your token is confidential.
-    # Do not share your key in public code.
+    token="token", # IBM Cloud API key.
+    # Your token is confidential. Do not share your key in public code.
     instance="<IBM Cloud CRN or instance name>", # Optionally specify the instance to use.
-    plans_preference="['plan-type1', 'plan-type2']", # Optionally set the types of plans to prioritize.  This is ignored if the instance is specified.
-    region="<region>", # Optionally set the region to prioritize.
+    plans_preference="['open', 'premium']", # Optionally set the types of plans to prioritize.  This is ignored if the instance is specified.
+    # Additionally, instances of a certain plan type are excluded if the plan name is not specified.
+    region="us-east", # Optionally set the region to prioritize. Accepted values are 'us-east' or 'eu-de'. This is ignored if the instance is specified.
     name="<account-name>", # Optionally name this set of account credentials.
     set_as_default=True, # Optionally set these as your default credentials.
   )
