--- a/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/shor-algorithm.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/phase-estimation-and-factoring/shor-algorithm.ipynb
@@ -127,9 +127,10 @@
     "\n",
     "Now we can state the order-finding problem.\n",
     "\n",
-    "> **Order finding**\\\n",
-    "> Input: positive integers $N$ and $a$ satisfying $\\gcd(N,a) = 1$\\\n",
-    "> Output: the smallest positive integer $r$ such that $a^r \\equiv 1$ $(\\textrm{mod } N)$\n",
+    "<Admonition type=\"tip\" title=\"Order finding\">\n",
+    "Input: positive integers $N$ and $a$ satisfying $\\gcd(N,a) = 1$\\\n",
+    "Output: the smallest positive integer $r$ such that $a^r \\equiv 1$ $(\\textrm{mod } N)$\n",
+    "</Admonition>\n",
     "\n",
     "Alternatively, in terms of the notation we just introduced above, we're given $a \\in \\mathbb{Z}_N^{\\ast},$ and we're looking for the smallest positive integer $r$ such that $a^r = 1.$\n",
     "This number $r$ is called the *order* of $a$ modulo $N.$\n",
@@ -488,10 +489,11 @@
     "We won't explain the continued fraction algorithm here.\n",
     "Instead, here's a statement of a known fact about this algorithm.\n",
     "\n",
-    "> **Fact.**\n",
-    "> Given an integer $N\\geq 2$ and a real number $\\alpha\\in(0,1),$ there is at most one choice of integers $u,v\\in\\{0,\\ldots,N-1\\}$ with $v\\neq 0$ and $\\gcd(u,v)=1$ satisfying $\\vert \\alpha - u/v\\vert < \\frac{1}{2N^2}.$\n",
-    "> Given $\\alpha$ and $N,$ the *continued fraction algorithm* finds $u$ and $v,$ or reports that they don't exist.\n",
-    "> This algorithm can be implemented as a Boolean circuit having size $O((\\operatorname{lg}(N))^3).$\n",
+    "<Admonition type=\"tip\" title=\"Fact\">\n",
+    "Given an integer $N\\geq 2$ and a real number $\\alpha\\in(0,1),$ there is at most one choice of integers $u,v\\in\\{0,\\ldots,N-1\\}$ with $v\\neq 0$ and $\\gcd(u,v)=1$ satisfying $\\vert \\alpha - u/v\\vert < \\frac{1}{2N^2}.$\n",
+    "Given $\\alpha$ and $N,$ the *continued fraction algorithm* finds $u$ and $v,$ or reports that they don't exist.\n",
+    "This algorithm can be implemented as a Boolean circuit having size $O((\\operatorname{lg}(N))^3).$\n",
+    "</Admonition>\n",
     "\n",
     "If we have a very close approximation $y/2^m$ to $k/r,$ and we run the continued fraction algorithm for $N$ and $\\alpha = y/2^m,$ we'll get $u$ and $v,$ as they're described in the fact.\n",
     "An analysis of the fact allows us to conclude that\n",
@@ -581,19 +583,19 @@
     "It's good that we can do both of these things because order finding won't help us to factor even numbers or for *prime* powers, where the number $s$ happens to be prime.\n",
     "If $N$ is odd and not a prime power, however, order finding allows us to split $N.$\n",
     "\n",
-    "> **Probabilistic algorithm to split an odd, composite integer N that is not a prime power**\n",
-    ">\n",
-    "> 1. Randomly choose $a\\in\\{2,\\ldots,N-1\\}.$\n",
-    "> 2. Compute $d=\\gcd(a,N).$\n",
-    "> 3. If $d > 1$ then output $b = d$ and $c = N/d$ and stop. Otherwise continue to the next step knowing that $a\\in\\mathbb{Z}_N^{\\ast}.$\n",
-    "> 4. Let $r$ be the order of $a$ modulo $N.$ (Here's where we need order finding.)\n",
-    "> 5. If $r$ is even:\n",
-    ">\n",
-    ">    5.1 Compute $x = a^{r/2} - 1$ modulo $N$ \\\n",
-    ">    5.2 Compute $d = \\gcd(x,N).$ \\\n",
-    ">    5.3 If $d>1$ then output $b=d$ and $c = N/d$ and stop.\n",
-    ">\n",
-    "> 6. If this point is reached, the algorithm has failed to find a factor of $N.$\n",
+    "<Admonition type=\"tip\" title=\"Probabilistic algorithm to split an odd, composite integer N that is not a prime power\">\n",
+    "1. Randomly choose $a\\in\\{2,\\ldots,N-1\\}.$\n",
+    "2. Compute $d=\\gcd(a,N).$\n",
+    "3. If $d > 1$ then output $b = d$ and $c = N/d$ and stop. Otherwise continue to the next step knowing that $a\\in\\mathbb{Z}_N^{\\ast}.$\n",
+    "4. Let $r$ be the order of $a$ modulo $N.$ (Here's where we need order finding.)\n",
+    "5. If $r$ is even:\n",
+    "\n",
+    "   5.1 Compute $x = a^{r/2} - 1$ modulo $N$ \\\n",
+    "   5.2 Compute $d = \\gcd(x,N).$ \\\n",
+    "   5.3 If $d>1$ then output $b=d$ and $c = N/d$ and stop.\n",
+    "\n",
+    "6. If this point is reached, the algorithm has failed to find a factor of $N.$\n",
+    "</Admonition>\n",
     "\n",
     "A run of this algorithm may fail to find a factor of $N.$\n",
     "Specifically, this happens in two situations:\n",
