--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/factoring-and-gcd.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/factoring-and-gcd.ipynb
@@ -17,9 +17,10 @@
     "\n",
     "To explain further, let's introduce the *integer factorization* problem.\n",
     "\n",
-    "> **Integer factorization** \\\n",
-    "> Input:  an integer $N\\geq 2$\\\n",
-    "> Output: the prime factorization of $N$\n",
+    "<Admonition type=\"tip\" title=\"Integer factorization\">\n",
+    "Input:  an integer $N\\geq 2$\\\n",
+    "Output: the prime factorization of $N$\n",
+    "</Admonition>\n",
     "\n",
     "By the *prime factorization* of $N$ we mean a list of the prime factors of $N$ and the powers to which they must be raised to obtain $N$ by multiplication.\n",
     "For example, the prime factors of $12$ are $2$ and $3,$ and to obtain $12$ we must take the product of $2$ to the power $2$ and $3$ to the power $1.$\n",
