--- a/docs/tutorials/fractional-gates.ipynb
+++ b/docs/tutorials/fractional-gates.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Introduction to fractional gates\n",
     "\n",
-    "Usage estimate: under 30 seconds on `ibm_fez` (NOTE: This is an estimate only. Your runtime may vary.)"
+    "*Usage estimate: under 30 seconds on `ibm_fez` (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
   {
