--- a/learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb
@@ -647,7 +647,7 @@
     "\n",
     "1. Set $\\mathsf{Y}$ to be equal to $\\mathsf{X}.$\n",
     "2. Set $\\mathsf{X}$ to be equal to $\\mathsf{Y}.$\n",
-    "</Admoniton>\n",
+    "</Admonition>\n",
     "\n",
     "The matrix representation of this operation is as follows:\n",
     "\n",
