add usage estimate for Shor's

--- a/docs/tutorials/shors-algorithm.ipynb
+++ b/docs/tutorials/shors-algorithm.ipynb
@@ -10,6 +10,9 @@
    },
    "source": [
     "# Shor's algorithm\n",
+    "\n",
+    "*Usage estimate: Three seconds on an Eagle r3 processor (NOTE: This is an estimate only. Your runtime might vary.)*\n",
+    "\n",
     "[Shor's algorithm,](https://epubs.siam.org/doi/abs/10.1137/S0036144598347011) developed by Peter Shor in 1994, is a groundbreaking quantum algorithm for factoring integers in polynomial time. Its significance lies in its ability to factor large integers exponentially faster than any known classical algorithm, threatening the security of widely used cryptographic systems like RSA, which rely on the difficulty of factoring large numbers. By efficiently solving this problem on a sufficiently powerful quantum computer, Shor's algorithm could revolutionize fields such as cryptography, cybersecurity, and computational mathematics, underscoring the transformative power of quantum computation.\n",
     "\n",
     "\n",
@@ -1327,7 +1330,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-    "title": "Shor's algorithm\n"
+  "title": "Shor's algorithm\n"
  },
  "nbformat": 4,
  "nbformat_minor": 4
