--- a/docs/guides/colibritd-pde.ipynb
+++ b/docs/guides/colibritd-pde.ipynb
@@ -13,8 +13,24 @@
    "id": "2f87f5f0",
    "metadata": {},
    "source": [
-    "# QUICK-PDE: A Qiskit Function by ColibriTD\n",
-    "\n",
+    "# QUICK-PDE: A Qiskit Function by ColibriTD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9852687",
+   "metadata": {
+   "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01701579",
+   "metadata": {},
+   "source": [
     "<Admonition type=\"note\">\n",
     "  Qiskit Functions are an experimental feature available to IBM Quantum&reg; Premium Plan, Flex Plan, and On-Prem (via IBM Quantum Platform API) Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>"
