--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/factoring-and-gcd.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/factoring-and-gcd.ipynb
@@ -175,9 +175,10 @@
     "\n",
     "Next let's consider a related but very different problem, which is computing the greatest common divisor (or GCD) of two integers.\n",
     "\n",
-    "> **Greatest common divisor (GCD)** \\\n",
-    "> Input: nonnegative integers $N$ and $M,$ at least one of which is positive\\\n",
-    "> Output: the greatest common divisor of $N$ and $M$\n",
+    "<Admonition type=\"tip\" title=\"Greatest common divisor (GCD)\">\n",
+    "Input: nonnegative integers $N$ and $M,$ at least one of which is positive\\\n",
+    "Output: the greatest common divisor of $N$ and $M$\n",
+    "</Admonition>\n",
     "\n",
     "The greatest common divisor of two numbers is the largest integer that evenly divides both of them.\n",
     "\n",
