--- a/learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/multiple-systems/classical-information.ipynb
@@ -590,10 +590,10 @@
     "\n",
     "For example, suppose that $\\mathsf{X}$ and $\\mathsf{Y}$ are bits, and consider an operation with the following description.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Operation\">\n",
+    "<Figure title=\"Operation\">\n",
     "If $\\mathsf{X} = 1,$ then perform a NOT operation on $\\mathsf{Y}.$\\\n",
     "Otherwise do nothing.\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "This is a deterministic operation known as a *controlled-NOT* operation, where $\\mathsf{X}$ is the *control* bit that determines whether or not a NOT operation should be applied to the *target* bit $\\mathsf{Y}.$\n",
     "Here is the matrix representation of this operation:\n",
@@ -642,12 +642,12 @@
     "\n",
     "Another example is the operation having this description:\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Operation\">\n",
+    "<Figure title=\"Operation\">\n",
     "Perform one of the following two operations, each with probability $1/2:$\n",
     "\n",
     "1. Set $\\mathsf{Y}$ to be equal to $\\mathsf{X}.$\n",
     "2. Set $\\mathsf{X}$ to be equal to $\\mathsf{Y}.$\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "The matrix representation of this operation is as follows:\n",
     "\n",
