--- a/learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information.ipynb
+++ b/learning/courses/basics-of-quantum-information/quantum-circuits/limitations-on-quantum-information.ipynb
@@ -114,13 +114,13 @@
     "\n",
     "The *no-cloning theorem* shows it is impossible to create a perfect copy of an unknown quantum state.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Theorem\">\n",
+    "<Figure title=\"Theorem\">\n",
     "No-cloning theorem: Let $\\Sigma$ be a classical state set having at least two elements, and let $\\mathsf{X}$ and $\\mathsf{Y}$ be systems sharing the same classical state set $\\Sigma.$ There does not exist a quantum state $\\vert \\phi\\rangle$ of $\\mathsf{Y}$ and a unitary operation $U$ on the pair $(\\mathsf{X},\\mathsf{Y})$ such that\n",
     "$$\n",
     "U \\bigl( \\vert \\psi \\rangle \\otimes \\vert\\phi\\rangle\\bigr) = \\vert \\psi \\rangle \\otimes \\vert\\psi\\rangle\n",
     "$$\n",
     "for every state $\\vert \\psi \\rangle$ of $\\mathsf{X}.$\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "That is, there is no way to initialize the system $\\mathsf{Y}$ (to any state $\\vert\\phi\\rangle$ whatsoever) and perform a unitary operation $U$ on the joint system $(\\mathsf{X},\\mathsf{Y})$ so that the effect is for the state $\\vert\\psi\\rangle$ of $\\mathsf{X}$ to be *cloned* — resulting in $(\\mathsf{X},\\mathsf{Y})$ being in the state\n",
     "$\\vert \\psi \\rangle \\otimes \\vert\\psi\\rangle.$\n",
