--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/measuring-computational-cost.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/measuring-computational-cost.ipynb
@@ -225,10 +225,10 @@
     "\n",
     "To explain further, let's take a moment to consider the problem of integer addition, which is much simpler than integer factoring or even computing GCDs.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Integer addition\">\n",
+    "<Figure title=\"Integer addition\">\n",
     "Input: integers $N$ and $M$\\\n",
     "Output: $N+M$\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "How might we design Boolean circuits for solving this problem?\n",
     "\n",
@@ -314,10 +314,10 @@
     "\n",
     "Here are a few more examples of problems from computational number theory, beginning with *multiplication*.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Integer multiplication\">\n",
+    "<Figure title=\"Integer multiplication\">\n",
     "Input: integers $N$ and $M$\\\n",
     "Output: $NM$\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "Creating Boolean circuits for this problem is more difficult than creating circuits for addition — but by thinking about the standard multiplication algorithm, we can come up with circuits having size $O(n^2)$ for this problem (assuming $N$ and $M$ are both represented by $n$-bit binary representations).\n",
     "More generally, if $N$ has $n$ bits and $M$ has $m$ bits, there are Boolean circuits of size $O(nm)$ for multiplying $N$ and $M.$\n",
@@ -328,10 +328,10 @@
     "\n",
     "Another basic problem is *division*, which we interpret to mean computing both the quotient and remainder given an integer divisor and dividend.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Integer division\">\n",
+    "<Figure title=\"Integer division\">\n",
     "Input: integers $N$ and $M\\neq0$\\\n",
     "Output: integers $q$ and $r$ satisfying $0\\leq r < |M|$ and $N = q M + r$\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "The cost of integer division is similar to multiplication: if $N$ has $n$ bits and $M$ has $m$ bits, there are Boolean circuits of size $O(nm)$ for solving this problem.\n",
     "And like multiplication, asymptotically superior methods are known.\n",
@@ -342,10 +342,10 @@
     "\n",
     "A somewhat more expensive computation that arises in number theory is *modular exponentiation*.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Integer modular exponentiation\">\n",
+    "<Figure title=\"Integer modular exponentiation\">\n",
     "Input: integers $N,$ $K,$ and $M$ with $K\\geq 0$ and $M\\geq 1$\\\n",
     "Output: $N^K \\hspace{1mm} (\\text{mod }M)$\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "By $N^K\\hspace{1mm} (\\text{mod }M)$ we mean the remainder when $N^K$ is divided by $M,$ meaning the unique integer $r$ satisfying $0\\leq r < M$ and $N^K = q M + r$ for some integer $q.$\n",
     "\n",
