--- a/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/purifications.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/purifications.ipynb
@@ -13,13 +13,13 @@
     "\n",
     "Let us begin with a precise mathematical definition for purifications.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Definition\">\n",
+    "<Figure title=\"Definition\">\n",
     "Suppose $\\mathsf{X}$ is a system in a state represented by a density matrix $\\rho,$ and $\\vert\\psi\\rangle$ is a quantum state vector of a pair $(\\mathsf{X},\\mathsf{Y})$ that leaves $\\rho$ when $\\mathsf{Y}$ is traced out:\n",
     "$$\n",
     "\\rho = \\operatorname{Tr}_{\\mathsf{Y}} \\bigl( \\vert \\psi\\rangle\\langle\\psi\\vert\\bigr).\n",
     "$$\n",
     "The state vector $\\vert\\psi\\rangle$ is then said to be a *purification* of $\\rho.$\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "The pure state $\\vert\\psi\\rangle\\langle\\psi\\vert,$ expressed as a density matrix rather than a quantum state vector, is also commonly referred to as a purification of $\\rho$ when the equation in the definition is true, but we'll generally use the term to refer to a quantum state vector.\n",
     "\n",
@@ -143,13 +143,13 @@
     "Schmidt decompositions are closely connected with purifications, and they're very useful in their own right.\n",
     "Indeed, when reasoning about a given quantum state vector $\\vert\\psi\\rangle$ of a pair of systems, the first step is often to identify or consider a Schmidt decomposition of this state.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Definition\">\n",
+    "<Figure title=\"Definition\">\n",
     "Let $\\vert \\psi\\rangle$ be a given quantum state vector of a pair of systems $(\\mathsf{X},\\mathsf{Y}).$ A *Schmidt decomposition* of $\\vert\\psi\\rangle$ is an expression of the form\n",
     "$$\n",
     "\\vert \\psi\\rangle = \\sum_{a = 0}^{r-1} \\sqrt{p_a}\\, \\vert x_a\\rangle \\otimes \\vert y_a \\rangle,\n",
     "$$\n",
     "where $p_0,\\ldots,p_{r-1}$ are positive real numbers summing to $1$ and *both* of the sets $\\{\\vert x_0\\rangle,\\ldots,\\vert x_{r-1}\\rangle\\}$ and $\\{\\vert y_0\\rangle,\\ldots,\\vert y_{r-1}\\rangle\\}$ are orthonormal.\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "The values\n",
     "\n",
@@ -319,7 +319,7 @@
     "\n",
     "We can use Schmidt decompositions to establish a fundamentally important fact concerning purifications known as the *unitary equivalence of purifications*.\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Theorem\">\n",
+    "<Figure title=\"Theorem\">\n",
     "Unitary equivalence of purifications: Suppose that $\\mathsf{X}$ and $\\mathsf{Y}$ are systems, and $\\vert\\psi\\rangle$ and $\\vert\\phi\\rangle$ are quantum state vectors of $(\\mathsf{X},\\mathsf{Y})$ that both purify the same state of $\\mathsf{X}.$ In symbols,\n",
     "$$\n",
     "\\operatorname{Tr}_{\\mathsf{Y}} (\\vert\\psi\\rangle\\langle\\psi\\vert) = \\rho = \\operatorname{Tr}_{\\mathsf{Y}} (\\vert\\phi\\rangle\\langle\\phi\\vert)\n",
@@ -329,7 +329,7 @@
     "$$\n",
     "(\\mathbb{I}_{\\mathsf{X}} \\otimes U) \\vert\\psi\\rangle = \\vert\\phi\\rangle.\n",
     "$$\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "We'll discuss a few implications of this theorem as the lesson continues, but first let's see how it follows from our previous discussion of Schmidt decompositions.\n",
     "\n",
@@ -459,7 +459,7 @@
     "The last implication of the unitary equivalence of purifications that we'll discuss in this portion of the lesson is the following theorem known as the Hughston-Jozsa-Wootters theorem.\n",
     "(This is, in fact, a slightly simplified statement of the theorem known by this name.)\n",
     "\n",
-    "<Admonition type=\"tip\" title=\"Theorem\">\n",
+    "<Figure title=\"Theorem\">\n",
     "Hughston-Jozsa-Wootters: Let $\\mathsf{X}$ and $\\mathsf{Y}$ be systems and let $\\vert\\phi\\rangle$ be a quantum state vector of the pair $(\\mathsf{X},\\mathsf{Y}).$\n",
     "Also let $N$ be an arbitrary positive integer, let $(p_0,\\ldots,p_{N-1})$ be a probability vector, and let $\\vert\\psi_0\\rangle,\\ldots,\\vert\\psi_{N-1}\\rangle$ be quantum state vectors representing states of $\\mathsf{X}$ such that\n",
     "$$\n",
@@ -469,7 +469,7 @@
     "\n",
     "1. Each measurement outcome $a\\in\\{0,\\ldots,N-1\\}$ appears with probability $p_a$.\n",
     "2. Conditioned on obtaining the measurement outcome $a,$ the state of $\\mathsf{X}$ becomes $\\vert\\psi_a\\rangle.$\n",
-    "</Admonition>\n",
+    "</Figure>\n",
     "\n",
     "Intuitively speaking, this theorem says that as long as we have a pure state of two systems, then for *any* way of thinking about the reduced state of the first system as a convex combination of pure states, there is a measurement of the second system that effectively makes this way of thinking about the first system a reality.\n",
     "Notice that the number $N$ is not necessarily bounded by the number of classical states of $\\mathsf{X}$ or $\\mathsf{Y}.$\n",
