Ensure header and style consistency

--- a/docs/guides/install-c-api.mdx
+++ b/docs/guides/install-c-api.mdx
@@ -13,10 +13,10 @@ The following example builds an observable with C:
 ```c
 // file: example.c
 #include <stdio.h>
-#include <complex.h>
+#include <stdint.h>
 #include <qiskit.h>
 
-int main(int argc, char* argv[]) {
+int main(int argc, char *argv[]) {
     // build a 100-qubit empty observable
     uint32_t num_qubits = 100;
     QkObs *obs = qk_obs_zero(num_qubits);
