Clarify service init behavior (#3698)
A user saved their account with a default instance but then initialized
the `QiskitRuntimeService` with a token so the saved account was not
used. This confusion caused them to mistakenly use a premium instance,
thinking they were using the open instance.

```python
QiskitRuntimeService.save_account(
    token=token,
    channel="ibm_quantum_platform",
    instance=CRN
)

# This initializes a new account with the token and channel, it does not use the saved account. 
service = QiskitRuntimeService(channel="ibm_quantum_platform", token=token)
```

--- a/docs/guides/cloud-setup-untrusted.mdx
+++ b/docs/guides/cloud-setup-untrusted.mdx
@@ -25,6 +25,7 @@ To initialize the service in this situation, use code like the following:
     ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
 
+    # Saved accounts are not used when a token is passed in. The service is initialized with credentials that are not saved.
     service = QiskitRuntimeService(
       # Delete your key on the API keys page after entering this code:
       token="<IBM Cloud API key>",
