Updated post-survey link to quantum-safe cryptography course

--- a/learning/courses/quantum-safe-cryptography/whats-next.mdx
+++ b/learning/courses/quantum-safe-cryptography/whats-next.mdx
@@ -38,6 +38,4 @@ As you have now completed the learning material for this course, you may wish to
 
 ## Post-course survey
 
-Please take a moment to help us improve our website with a quick survey below. We will use the feedback accordingly to better user experience and provide clearer explanations throughout the course.
-
-<iframe src="https://ibmxm.qualtrics.com/jfe/form/SV_cN5e3fik8L211We" width="100%" height="1200"></iframe>
+Please take a moment to help us improve our website with a quick [post-course survey](https://your.feedback.ibm.com/jfe/form/SV_d3XWeuV7hEC8Dki). We will use the feedback accordingly to better user experience and provide clearer explanations throughout the course.
