--- a/learning/courses/quantum-computing-in-practice/mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/mapping.ipynb
@@ -236,7 +236,7 @@
  "metadata": {
   "description": "Learn about mapping considerations for nature simulation problems.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -250,9 +250,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.11"
   },
-  "title": "Coming soon – Mapping"
+  "title": "Coming soon – Mapping",
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
