--- a/learning/courses/quantum-computing-in-practice/mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/mapping.ipynb
@@ -252,7 +252,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Coming soon – Mapping",
+  "title": "Coming soon – Mapping"
  },
  "nbformat": 4,
  "nbformat_minor": 5
