--- a/learning/courses/quantum-safe-cryptography/whats-next.mdx
+++ b/learning/courses/quantum-safe-cryptography/whats-next.mdx
@@ -38,4 +38,4 @@ As you have now completed the learning material for this course, you may wish to
 
 ## Post-course survey
 
-Please take a moment to help us improve our website with a quick [post-course survey](https://your.feedback.ibm.com/jfe/form/SV_d3XWeuV7hEC8Dki). We will use the feedback accordingly to better user experience and provide clearer explanations throughout the course.
+Please take a moment to help us improve our course with a quick [post-course survey](https://your.feedback.ibm.com/jfe/form/SV_d3XWeuV7hEC8Dki). Your feedback will be used to enhance our content offering and user experience. Thank you!
