Fix typo on qubit labels

--- a/learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb
+++ b/learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game.ipynb
@@ -261,7 +261,7 @@
     "\n",
     "Now we can describe the quantum strategy.\n",
     "\n",
-    "- **Set-up:** Alice and Bob start the game sharing an e-bit: Alice holds a qubit $\\mathsf{A},$ Bob holds a qubit $\\mathsf{B},$ and together the two qubits $(\\mathsf{X},\\mathsf{Y})$ are in the $\\vert\\phi^+\\rangle$ state.\n",
+    "- **Set-up:** Alice and Bob start the game sharing an e-bit: Alice holds a qubit $\\mathsf{A},$ Bob holds a qubit $\\mathsf{B},$ and together the two qubits $(\\mathsf{A},\\mathsf{B})$ are in the $\\vert\\phi^+\\rangle$ state.\n",
     "\n",
     "- **Alice's actions:**\n",
     "  - If Alice receives the question $x=0,$ she applies $U_{0}$ to her qubit $\\mathsf{A}.$\n",
