changed red to yellow

--- a/learning/courses/quantum-safe-cryptography/quantum-safe-cryptography.ipynb
+++ b/learning/courses/quantum-safe-cryptography/quantum-safe-cryptography.ipynb
@@ -260,7 +260,7 @@
     "\n",
     "![Fig 2: The SVP on a lattice specified by basis vectors b_1, b_2: The orange vector is the shortest vector](/learning/images/courses/quantum-safe-cryptography/quantum-safe-cryptography/SVP.avif)\n",
     "\n",
-    "*Figure 2. The SVP on a lattice specified by basis vectors $b_1$, $b_2$: The red vector is the shortest vector*\n",
+    "*Figure 2. The SVP on a lattice specified by basis vectors $b_1$, $b_2$: The yellow vector is the shortest vector*\n",
     "\n",
     "[Miklós Ajtai has shown that the shortest vector problem is **NP-hard**][96] in the worst case for certain random lattices, even when lattice-basis reduction to a *good* basis is possible.\n",
     "\n",
